maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: ':' expected but ')' found.
	def isDirectionFree(dir): Boolean =
                               ^Escaper:43: error: identifier expected but '}' found.
}
^